--- a/package.json
+++ b/package.json
@@ -8,15 +8,21 @@
     "preview": "astro preview"
   },
   "dependencies": {
-    "astro": "^4.0.0",
-    "@astrojs/tailwind": "^4.0.0",
     "@astrojs/react": "^4.0.0",
+    "@astrojs/svelte": "^7.2.5",
+    "@astrojs/tailwind": "^4.0.0",
+    "astro": "^4.0.0",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "svelte": "^5.46.4",
+    "uuid": "^13.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "tailwindcss": "^3.0.0",
     "@tailwindcss/typography": "^0.5.9",
+    "tailwindcss": "^3.0.0",
     "typescript": "^5.0.0"
   },
   "engines": {
