--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
+    "@types/react": "^19.2.10",
+    "@types/react-dom": "^19.2.3",
     "tailwindcss": "^3.0.0",
     "typescript": "^5.0.0"
   },
